fix(styles): add wrap to lines

--- a/src/App.scss
+++ b/src/App.scss
@@ -208,7 +208,7 @@ pre[class*="language-"] {
 }
 #app > div > div.rewrite-editor > div.Editor > div > pre > div {
   overflow: hidden !important;
-  white-space: pre-wrap;
+  white-space: pre-wrap !important;
 }
 
 body {
